--- a/src/style/styles.css
+++ b/src/style/styles.css
@@ -3,7 +3,6 @@ body {
     margin: 0;
     font-family: Arial;
     color: rgba(0, 0, 0, 0.7);
-    background-color: blueviolet;
     width: 100vw;
 }
 
@@ -67,3 +66,11 @@ input {
     left: 0;
     padding: 2px;
 }
+
+@media (prefers-color-scheme: dark) {
+    body { background: #333; color: white; }
+  }
+  
+  @media (prefers-color-scheme: light) {
+    body { background: #ddd; color: black; }
+  }
